--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Subuthai's Very Simple Portfolio</title>
+    <title>Madara's Very Simple Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -31,7 +31,7 @@
       </div>
       <div class="titleMessage">
         <div class="heading">
-          <p class="main">Subuthai's Very Simple Portfolio</p>
+          <p class="main">Madara's Very Simple Portfolio</p>
           <p class="sub typed"></p>
         </div>
       </div>
